# deep-interatomic-potential-models

./: .buildinfo  .gitignore  CHANGELOG  Dockerfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api_reference/: index.doctree
.doctrees/api_reference/data/: atomic_number_table.doctree  batching_helpers.doctree  chemical_system.doctree  combined_graph_dataset.doctree  data_prefetching.doctree  data_split.doctree  dataset_builder_config.doctree  dataset_configs.doctree  dataset_info.doctree  dataset_manager.doctree  graph.doctree  graph_dataset.doctree  graph_dataset_builder.doctree  graph_definition.doctree  helper_functions.doctree  index.doctree  single_graph_dataset_builder.doctree
.doctrees/api_reference/layers/: common.doctree  escn.doctree  index.doctree
.doctrees/api_reference/loss/: index.doctree  loss.doctree
.doctrees/api_reference/models/: blocks.doctree  config.doctree  conservative_predictor.doctree  equiformerv2.doctree  esen.doctree  force_field.doctree  force_model.doctree  hessian_predictor.doctree  index.doctree  inference_context.doctree  io.doctree  liten.doctree  loss.doctree  mace.doctree  mlip_network.doctree  nequip.doctree  options.doctree  prediction.doctree  predictor.doctree  properties.doctree  readout.doctree  uma.doctree  visnet.doctree
.doctrees/api_reference/simulation/: ase_calculator.doctree  ase_engine.doctree  ase_sim_config.doctree  batched_inference.doctree  enums.doctree  graph_creation_jaxmd.doctree  graph_from_atoms.doctree  index.doctree  jaxmd_engine.doctree  jaxmd_sim_config.doctree  metadynamics_config.doctree  metadynamics_engine.doctree  metadynamics_potential_configs.doctree  neb_config.doctree  neb_engine.doctree  sim_config.doctree  simulation_engine.doctree  simulation_state.doctree  temperature_scheduling.doctree
.doctrees/api_reference/training/: ema.doctree  evaluation.doctree  finetuning.doctree  index.doctree  optimizer.doctree  training_io_handling.doctree  training_loop.doctree  training_loop_config.doctree  training_state.doctree  training_step.doctree
.doctrees/api_reference/utils/: index.doctree  io.doctree  multihost.doctree
.doctrees/installation/: index.doctree
.doctrees/migration_guide/: index.doctree
.doctrees/user_guide/: data_processing.doctree  dataset_preparation.doctree  finetuning.doctree  index.doctree  inference.doctree  models.doctree  simulations.doctree  training.doctree
.doctrees/user_guide/advanced/: data_processing.doctree  index.doctree  models.doctree  training_advanced.doctree
.github/workflows/: deploy_docs.yaml  publish.yaml  tests_and_linters.yaml
_sources/: index.rst.txt
_sources/api_reference/: index.rst.txt
_sources/api_reference/data/: atomic_number_table.rst.txt  data_prefetching.rst.txt  data_split.rst.txt  dataset_configs.rst.txt  dataset_info.rst.txt  graph_dataset.rst.txt  graph_definition.rst.txt  helper_functions.rst.txt
_sources/api_reference/layers/: common.rst.txt
_sources/api_reference/loss/: index.rst.txt  loss.rst.txt
_sources/api_reference/models/: equiformerv2.rst.txt  force_model.rst.txt  index.rst.txt  liten.rst.txt  mace.rst.txt  prediction.rst.txt  uma.rst.txt
_sources/installation/: index.rst.txt
_sources/user_guide/: dataset_preparation.rst.txt  training.rst.txt
api_reference/: index.html
api_reference/data/: atomic_number_table.html  chemical_system.html  data_prefetching.html  data_split.html  dataset_configs.html  dataset_info.html  dataset_manager.html  graph_dataset.html  graph_dataset_builder.html  graph_definition.html  helper_functions.html  index.html
api_reference/layers/: common.html  escn.html  index.html
api_reference/loss/: index.html  loss.html
api_reference/models/: equiformerv2.html  esen.html  force_model.html  index.html  liten.html  mace.html  nequip.html  prediction.html  predictor.html  uma.html  visnet.html
api_reference/simulation/: ase_calculator.html  ase_engine.html  batched_inference.html  enums.html  graph_from_atoms.html  index.html  jaxmd_engine.html  sim_config.html  simulation_engine.html  simulation_state.html  temperature_scheduling.html
api_reference/training/: evaluation.html  index.html  optimizer.html  training_io_handling.html  training_loop.html  training_step.html
api_reference/utils/: index.html  io.html
dipm-conversion-tool/: README.md  pyproject.toml
dipm-conversion-tools/: README.md  pyproject.toml
dipm-conversion-tools/src/dipm_cvt/: __init__.py  _lazy_loader.py
dipm-conversion-tools/src/dipm_cvt/cli/: dataset_convert.py  main.py  model_convert.py
dipm-conversion-tools/src/dipm_cvt/dataset/: decompress.py  download.py  extxyz_load.py  hdf5_save.py  lmdb_load.py  openqdc_ds.py  utils.py
dipm-conversion-tools/src/dipm_cvt/model/: equiformer_v2.py
docs/source/: conf.py  index.rst
docs/source/installation/: index.rst
installation/: index.html
scripts/: run_md.py  train.py  train.yaml
src/dipm/: __init__.py
tests/: conftest.py
tests/data/: mace_test_params.pkl  spice2-1000_429_md_0-1.hdf5  visnet_test_params.pkl
tests/data_processing/: test_combined_reader.py  test_data_processing.py  test_hdf5_reader.py  test_reader_config.py
tests/models/: test_params_transfer.py  test_predictor.py
tests/models_core/: test_mace.py  test_mace_block.py  test_symmetric_contraction.py
tests/models_inference/: test_batched_inference.py  test_mace_inference.py  test_nequip_inference.py  test_visnet_inference.py
tests/simulation/: test_ase_energy_minimization.py  test_ase_simulation.py  test_jax_md_energy_minimization.py  test_jax_md_simulation.py
tests/training/: test_training.py
tests/utils/: test_get_edge_vectors.py  test_model_io.py  test_no_pbc_cell.py
tutorials/: model_addition_tutorial.ipynb  model_training_tutorial.ipynb  simulation_tutorial.ipynb
user_guide/: dataset_preparation.html  index.html  simulations.html  training.html
user_guide/advanced/: data_processing.html  index.html  models.html  training_advanced.html
(+202 files in other folders)
