[project]
name = "dipm"
version = "0.0.4"
description = "Deep Interatomic Potential Models in JAX"
license = "LGPL-3.0-or-later"
license-files = [
    "LICENSE",
    "LICENSE.LESSER",
    "LICENSE.MLIP",
]
authors = [
    {name = "Cao Bohan", email = "caobohan@mail.nankai.edu.cn"},
    {name = "InstaDeep", email = "placeholder@instadeep.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]

requires-python = ">=3.11,<3.14"

dependencies = [
    "numpy >1.26.0,<3",
    "jax >=0.4.32",
    "orbax-checkpoint ==0.5.2",
    "omegaconf >=2.3.0",
    "e3nn-jax >=0.20.7",
    "flax >=0.9.0",
    "jraph",
    "orbax >=0.1.9",
    "matscipy >=1.1.0",
    "pydantic >=2.10.2",
    "h5py >=3.12.1",
    "tqdm >=4.0",
    "tqdm-loggable >=0.2",
    "safetensors >=0.5.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12] >=0.4.32",
    "jaxlib >=0.4.32"
]
cue = [
    "cuequivariance >=0.6.0",
    "cuequivariance-jax >=0.6.0",
]
md = [
    "ase >=3.22.1",
    "jax-md >=0.2.26",
]
visual = [
    "tensorboardx >=2.4.1",
    "wandb >=0.12.10",
]

[dependency-groups]
dev = [
    "pytest >=7.4.0",
    "pytest-cov >=4.1.0",
    "black >=24.2.0",
    "pre-commit >=4.0.1",
    "sphinx >=8.1.3",
    "furo >=2024.8.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.coverage.report]
include_namespace_packages = true

[project.urls]
"Homepage" = "https://github.com/bhcao/deep-interatomic-potential-models/"
